--- a/ibas.importexport.service/pom.xml
+++ b/ibas.importexport.service/pom.xml
@@ -25,7 +25,7 @@
                 <version>2.6</version>
                 <configuration>
                     <archiveClasses>true</archiveClasses>
-                    <warSourceExcludes>**/*.ts,3rdparty/ibas/**,3rdparty/openui5/**,3rdparty/trainingtesting/**</warSourceExcludes>  
+                    <warSourceExcludes>**/*.ts,**/*.bat,**/*.sh,3rdparty/*.txt,3rdparty/ibas/**,3rdparty/openui5/**,3rdparty/trainingtesting/**,test/**</warSourceExcludes>
                 </configuration>
             </plugin>
         </plugins>
