--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <ibas.version>0.1.2</ibas.version>
+        <ibas.if.version>0.0.1</ibas.if.version>
     </properties>
     <build>
         <plugins>
@@ -85,6 +86,11 @@
             <groupId>org.colorcoding.ibas</groupId>
             <artifactId>bobas.businessobjectscommon.jersey</artifactId>
             <version>${ibas.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.colorcoding</groupId>
+            <artifactId>ibas.initialfantasy</artifactId>
+            <version>${ibas.if.version}</version>
         </dependency>
     </dependencies>
 </project>
