--- a/ibas.importexport.excel/pom.xml
+++ b/ibas.importexport.excel/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.colorcoding</groupId>
+    <groupId>org.colorcoding.apps</groupId>
     <artifactId>ibas.importexport.excel</artifactId>
     <version>0.0.1</version>
     <packaging>pom</packaging>
@@ -56,7 +56,7 @@
             <version>4.12</version>
         </dependency>
         <dependency>
-            <groupId>org.colorcoding</groupId>
+            <groupId>org.colorcoding.apps</groupId>
             <artifactId>ibas.importexport</artifactId>
             <version>${project.version}</version>
         </dependency>
