--- a/ibas.importexport.service/pom.xml
+++ b/ibas.importexport.service/pom.xml
@@ -3,7 +3,7 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.colorcoding</groupId>
+        <groupId>org.colorcoding.apps</groupId>
         <artifactId>ibas.importexport.parent</artifactId>
         <version>0.0.1</version>
     </parent>
@@ -33,7 +33,7 @@
     </build>
     <dependencies>
         <dependency>
-            <groupId>org.colorcoding</groupId>
+            <groupId>org.colorcoding.apps</groupId>
             <artifactId>ibas.importexport</artifactId>
             <version>${project.version}</version>
         </dependency>
