--- a/ibas.importexport/pom.xml
+++ b/ibas.importexport/pom.xml
@@ -2,7 +2,7 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.colorcoding</groupId>
+        <groupId>org.colorcoding.apps</groupId>
         <artifactId>ibas.importexport.parent</artifactId>
         <version>0.0.1</version>
     </parent>
