--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.colorcoding</groupId>
+    <groupId>org.colorcoding.apps</groupId>
     <artifactId>ibas.importexport.parent</artifactId>
     <version>0.0.1</version>
     <packaging>pom</packaging>
@@ -88,7 +88,7 @@
             <version>${ibas.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.colorcoding</groupId>
+            <groupId>org.colorcoding.apps</groupId>
             <artifactId>ibas.initialfantasy</artifactId>
             <version>${ibas.if.version}</version>
         </dependency>
