修正编译脚本

--- a/ibas.importexport.excel/pom.xml
+++ b/ibas.importexport.excel/pom.xml
@@ -4,7 +4,7 @@
     <groupId>org.colorcoding.apps</groupId>
     <artifactId>ibas.importexport.excel</artifactId>
     <version>0.0.1</version>
-    <packaging>pom</packaging>
+    <packaging>jar</packaging>
     <name>ibas.importexport.excel</name>
     <url>http://colorcoding.org/ibas/importexport/excel</url>
     <organization>
@@ -40,9 +40,9 @@
     </build>
     <repositories>
         <repository>
-            <id>ibas-dev</id>
+            <id>ibas-maven</id>
             <name>ibas maven repository</name>
-            <url>http://ibas.club:8877/nexus/content/groups/public/</url>
+            <url>http://maven.colorcoding.org/repository/maven-public/</url>
             <layout>default</layout>
             <snapshots>
                 <enabled>false</enabled>
