--- a/ibas.importexport.excel/pom.xml
+++ b/ibas.importexport.excel/pom.xml
@@ -60,5 +60,10 @@
             <artifactId>ibas.importexport</artifactId>
             <version>${project.version}</version>
         </dependency>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>3.15</version>
+		</dependency>
     </dependencies>
 </project>
