前端框架升级

--- a/ibas.importexport.excel/pom.xml
+++ b/ibas.importexport.excel/pom.xml
@@ -6,10 +6,10 @@
     <version>0.1.0</version>
     <packaging>jar</packaging>
     <name>ibas.importexport.excel</name>
-    <url>http://colorcoding.org/ibas/importexport/excel</url>
+    <url>https://colorcoding.org/ibas/importexport/excel</url>
     <organization>
-        <name>colorcoding</name>
-        <url>http://colorcoding.org</url>
+        <name>Color-Coding Studio</name>
+        <url>https://colorcoding.org</url>
     </organization>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
