--- a/ibas.importexport/pom.xml
+++ b/ibas.importexport/pom.xml
@@ -9,10 +9,10 @@
     <artifactId>ibas.importexport</artifactId>
     <packaging>jar</packaging>
     <name>ibas.importexport</name>
-    <url>http://colorcoding.org/ibas/importexport/</url>
+    <url>https://colorcoding.org/ibas/importexport/</url>
     <organization>
-        <name>colorcoding</name>
-        <url>http://colorcoding.org</url>
+        <name>Color-Coding Studio</name>
+        <url>https://colorcoding.org</url>
     </organization>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
