--- a/ibas.importexport.service/.project
+++ b/ibas.importexport.service/.project
@@ -1,37 +1,48 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-    <name>ibas.importexport.service</name>
-    <comment></comment>
-    <projects>
-        <project>ibas.importexport</project>
-    </projects>
-    <buildSpec>
-        <buildCommand>
-            <name>org.eclipse.jdt.core.javabuilder</name>
-            <arguments>
-            </arguments>
-        </buildCommand>
-        <buildCommand>
-            <name>org.eclipse.wst.common.project.facet.core.builder</name>
-            <arguments>
-            </arguments>
-        </buildCommand>
-        <buildCommand>
-            <name>org.eclipse.wst.validation.validationbuilder</name>
-            <arguments>
-            </arguments>
-        </buildCommand>
-        <buildCommand>
-            <name>org.eclipse.m2e.core.maven2Builder</name>
-            <arguments>
-            </arguments>
-        </buildCommand>
-    </buildSpec>
-    <natures>
-        <nature>org.eclipse.jem.workbench.JavaEMFNature</nature>
-        <nature>org.eclipse.wst.common.modulecore.ModuleCoreNature</nature>
-        <nature>org.eclipse.jdt.core.javanature</nature>
-        <nature>org.eclipse.m2e.core.maven2Nature</nature>
-        <nature>org.eclipse.wst.common.project.facet.core.nature</nature>
-    </natures>
+	<name>ibas.importexport.service</name>
+	<comment></comment>
+	<projects>
+		<project>ibas.importexport</project>
+	</projects>
+	<buildSpec>
+		<buildCommand>
+			<name>org.eclipse.jdt.core.javabuilder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
+		<buildCommand>
+			<name>org.eclipse.wst.common.project.facet.core.builder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
+		<buildCommand>
+			<name>org.eclipse.wst.validation.validationbuilder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
+		<buildCommand>
+			<name>org.eclipse.m2e.core.maven2Builder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
+	</buildSpec>
+	<natures>
+		<nature>org.eclipse.jem.workbench.JavaEMFNature</nature>
+		<nature>org.eclipse.wst.common.modulecore.ModuleCoreNature</nature>
+		<nature>org.eclipse.jdt.core.javanature</nature>
+		<nature>org.eclipse.m2e.core.maven2Nature</nature>
+		<nature>org.eclipse.wst.common.project.facet.core.nature</nature>
+	</natures>
+	<filteredResources>
+		<filter>
+			<id>1522036970981</id>
+			<name>src/main/webapp</name>
+			<type>26</type>
+			<matcher>
+				<id>org.eclipse.ui.ide.multiFilter</id>
+				<arguments>1.0-projectRelativePath-matches-false-false-src/main/webapp/3rdparty/openui5/resources</arguments>
+			</matcher>
+		</filter>
+	</filteredResources>
 </projectDescription>
