--- a/ibas.importexport.html/pom.xml
+++ b/ibas.importexport.html/pom.xml
@@ -59,6 +59,11 @@
 			<version>2.4.0</version>
 		</dependency>
 		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-simple</artifactId>
+			<version>1.7.25</version>
+		</dependency>
+		<dependency>
 			<groupId>org.colorcoding.apps</groupId>
 			<artifactId>ibas.importexport</artifactId>
 			<version>${project.version}</version>
