--- a/ibas.importexport.service/pom.xml
+++ b/ibas.importexport.service/pom.xml
@@ -1,5 +1,4 @@
-<project 
-    xmlns="http://maven.apache.org/POM/4.0.0" 
+<project xmlns="http://maven.apache.org/POM/4.0.0" 
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
@@ -42,11 +41,6 @@
             <artifactId>javax.servlet-api</artifactId>
             <version>3.1.0</version>
             <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.colorcoding.ibas</groupId>
-            <artifactId>bobas.businessobjectscommon.cxf</artifactId>
-            <version>${ibas.version}</version>
         </dependency>
         <dependency>
             <groupId>org.colorcoding.apps</groupId>
