--- a/ibas.importexport.service/src/main/webapp/WEB-INF/web.xml
+++ b/ibas.importexport.service/src/main/webapp/WEB-INF/web.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" id="WebApp_ID" version="3.1">
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
+  xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" id="WebApp_ID" version="3.1">
   <display-name>org.colorcoding.ibas.importexport.service</display-name>
   <servlet>
     <servlet-name>default</servlet-name>
@@ -36,15 +37,6 @@
     </init-param>
     <load-on-startup>3</load-on-startup>
   </servlet>
-<!--   <servlet>
-    <servlet-name>soap</servlet-name>
-    <servlet-class>org.colorcoding.ibas.bobas.cxf.CXFServlet</servlet-class>
-    <init-param>
-      <param-name>ibas.config.server.provider.packages</param-name>
-      <param-value>org.colorcoding.ibas.importexport.service.soap</param-value>
-    </init-param>
-    <load-on-startup>3</load-on-startup>
-  </servlet> -->
   <servlet-mapping>
     <servlet-name>default</servlet-name>
     <url-pattern>/*</url-pattern>
@@ -57,10 +49,6 @@
     <servlet-name>monitor</servlet-name>
     <url-pattern>/services/monitor/*</url-pattern>
   </servlet-mapping>
-<!--   <servlet-mapping>
-    <servlet-name>soap</servlet-name>
-    <url-pattern>/services/soap/*</url-pattern>
-  </servlet-mapping> -->
   <filter>
     <filter-name>CorsFilter</filter-name>
     <filter-class>org.apache.catalina.filters.CorsFilter</filter-class>
