--- a/ibas.importexport.html/pom.xml
+++ b/ibas.importexport.html/pom.xml
@@ -54,6 +54,11 @@
 			<version>4.12</version>
 		</dependency>
 		<dependency>
+			<groupId>com.jayway.jsonpath</groupId>
+			<artifactId>json-path</artifactId>
+			<version>2.7.0</version>
+		</dependency>
+		<dependency>
 			<groupId>org.colorcoding.apps</groupId>
 			<artifactId>ibas.importexport</artifactId>
 			<version>${project.version}</version>
