--- a/ibas.importexport.service/.classpath
+++ b/ibas.importexport.service/.classpath
@@ -24,6 +24,10 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry combineaccessrules="false" kind="src" path="/ibas.importexport"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/ibas.importexport">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
