--- a/ibas.importexport.excel/pom.xml
+++ b/ibas.importexport.excel/pom.xml
@@ -1,9 +1,12 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.colorcoding.apps</groupId>
+    <parent>
+        <groupId>org.colorcoding.apps</groupId>
+        <artifactId>ibas.importexport.parent</artifactId>
+        <version>0.2.0</version>
+    </parent>
     <artifactId>ibas.importexport.excel</artifactId>
-    <version>0.1.0</version>
     <packaging>jar</packaging>
     <name>ibas.importexport.excel</name>
     <url>https://colorcoding.org/ibas/importexport/excel</url>
@@ -11,47 +14,10 @@
         <name>Color-Coding Studio</name>
         <url>https://colorcoding.org</url>
     </organization>
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.7.0</version>
-                <configuration>
-                   <source>1.8</source>
-                   <target>1.8</target>
-                   <encoding>UTF-8</encoding>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <version>3.0.2</version>
-                <configuration>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
-    <repositories>
-        <repository>
-            <id>ibas-maven</id>
-            <name>ibas maven repository</name>
-            <url>http://maven.colorcoding.org/repository/maven-public/</url>
-            <layout>default</layout>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </repository>
-    </repositories>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
     <dependencies>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.12</version>
-        </dependency>
         <dependency>
             <groupId>org.colorcoding.apps</groupId>
             <artifactId>ibas.importexport</artifactId>
