增加图片列导出功能

--- a/ibas.importexport.service/src/main/webapp/tsconfig.json
+++ b/ibas.importexport.service/src/main/webapp/tsconfig.json
@@ -13,6 +13,7 @@
     "./3rdparty/shell/index.d.ts",
     "./3rdparty/openui5/index.d.ts",
     "./3rdparty/sheetjs/index.d.ts",
+    "./3rdparty/exceljs/index.d.ts",
     "./3rdparty/initialfantasy/index.d.ts"
   ],
   "files": [
